# Aidoku-Source

./: Dockerfile  README.md  Readme.md  docker-compose.yml  index.js  index.json  index.min.js  index.min.json
.github/workflows/: build.yaml
sources/: en.hentai2read-v1.aix  en.hentaifox-v2.aix  multi.myreadingmanga-v9.aix  vi.hentaivn-v5.aix  vi.hentaivn-v8.aix
src/rust/multi.myreadingmanga/src/: lib.rs
src/rust/vi.hentaivn/: Cargo.toml  build.sh  buildorg.sh
src/rust/vi.hentaivn/res/: source.json
src/rust/vi.hentaivn/src/: lib.rs  search.rs
